// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<div
  className="toolbar snapshot-class"
  data-qa="snapshot-qa"
>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    justifyContent="flex-end"
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      key="2"
    >
      <Memo()
        className="searchFieldContent ie11SearchBarTextCorrection snapshot-class"
        data-qa="table-search-bar"
        onCancelSearch={[MockFunction]}
        onChange={[Function]}
        placeholder="placeholder..."
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      key="1"
    />
  </ForwardRef(Grid)>
</div>
`;

exports[`Snapshot Testing Required Props 1`] = `
<div
  className="toolbar"
>
  <ForwardRef(Grid)
    alignItems="center"
    container={true}
    direction="row"
    justifyContent="flex-end"
    spacing={2}
  >
    <ForwardRef(Grid)
      item={true}
      key="2"
    >
      <Memo()
        className="searchFieldContent ie11SearchBarTextCorrection"
        data-qa="table-search-bar"
        onCancelSearch={[MockFunction]}
        onChange={[Function]}
        placeholder="placeholder..."
      />
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      item={true}
      key="1"
    />
  </ForwardRef(Grid)>
</div>
`;
